random color project finished

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="main">
       <div class="container">
-        <h2>#FFF</h2>
-        <button>CLick Me</button>
+        <h2 id="color-code">#fff</h2>
+        <button id="btn">CLick Me</button>
       </div>
     </div>
     <script src="js/script.js"></script>
